# da-parttime

./: .gitignore  Makefile  README.md  da_algorithm.py  demo_consecutive_break.py  docker-compose.yml  main.py  performance_test.py  pyproject.toml  streamlit_shift_matching_demo.py  test_5day_shift.py  test_break_display.py  test_constrained_algorithm.py  test_constraint_ui.py  test_multi_slot_debug.py  シフト表.csv
.cursor/rules/: my-rule.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
data/operators/: operators_default.csv  operators_template.csv
data/samples/: operators_default.csv  シフト表.numbers
data/shifts/: シフト表.csv  名称未設定.csv
deployment/: Dockerfile  env.example
docs/: shift_optimiser_roadmap.md
scripts/: main.py  performance_test.py
src/: __init__.py
src/algorithms/: __init__.py  constrained_multi_slot_da_algorithm.py  multi_slot_da_algorithm.py
src/app/: __init__.py  streamlit_shift_matching_demo.py
src/models/: __init__.py  constraints.py  multi_slot_models.py
src/tests/: test_constraints.py  test_multi_slot_models.py
src/utils/: __init__.py  algorithm_executor.py  config.py  constants.py  constraint_manager.py  csv_utils.py  data_converter.py  logger.py  point_calculator.py  schedule_converter.py  ui_components.py
tests/: __init__.py  test_5day_shift.py  test_break_constraint.py  test_consecutive_break_constraint.py  test_constrained_algorithm.py  test_constraint_ui.py  test_constraints.py  test_csv_paths.py  test_integrated.py  test_multi_slot_debug.py  test_multi_slot_models.py  test_operator_csv.py
