[tool.poetry]
name = "da-parttime"
version = "0.1.0"
description = ""
authors = ["Rai Rintarou <ikkmno123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.45.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
bandit = "^1.7.7"
safety = "^2.3.5"
black = "^24.1.1"
isort = "^5.13.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=40"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/app/streamlit_shift_matching_demo.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if __name__ == '__main__':",
    "def main\\(\\):",
    "if __name__ == \"__main__\":",
    "streamlit\\.run\\(",
    "st\\.",
    "st\\.page_config",
    "st\\.title",
    "st\\.sidebar",
    "st\\.selectbox",
    "st\\.file_uploader",
    "st\\.button",
    "st\\.dataframe",
    "st\\.plotly_chart",
    "st\\.success",
    "st\\.error",
    "st\\.warning",
    "st\\.info"
]

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
